[package]
name = "rtltc"
version = "0.1.0"
authors = ["Nekronod <s8stoswa@stud.uni-saarland.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
streamlab-frontend= {path = "../lolaparser/frontend"}
rusttyc = { git = "https://github.com/Schwenger/RustTyC.git" , branch="variants"}
regex = "*"
