[package]
name = "rtlola-frontend"
version = "0.3.4"
authors = [
    "Jan Baumeister <jbaumeister@react.uni-saarland.de>",
    "Florian Kohn <s8flkohn@stud.uni-saarland.de>",
    "Stefan Oswald <s.oswald@react.uni-saarland.de>",
    "Malte Schledjewski <schledjewski@react.uni-saarland.de>",
    "Maximilian Schwenger <schwenger@react.uni-saarland.de>",
    "Marvin Stenger <stenger@react.uni-saarland.de>",
    "Leander Tentrup <tentrup@react.uni-saarland.de>",
]
edition = "2018"
description = "A parser and analyzer for RTLola specifications."
readme = "README.md"
homepage = "http://rtlola.org"
repository = "https://github.com/reactive-systems/RTLola"
license = "Apache-2.0"
keywords = ["verification", "frontend", "monitoring", "parser", "analyzer"]

[dependencies]
bimap = "0.5.2"
clap = "2.33.0"  # command line parsing
color-backtrace = "0.3"
itertools = "0.9.0"
lazy_static = "1.3.0" # lazy_static! macro
log = "0.4.8"  # logging macros
num = "0.3.1"     # infinite precision rationals
petgraph = "0.5"
regex = "*"
rtlola-hir = { path = "../rtlola-hir" }
rtlola-reporting = { path = "../rtlola-reporting" }
rtlola-parser = { path = "../rtlola-parser" }
simplelog = "0.7.0"  # logging implementation
uom = { version = "0.30.0", default-features = false, features = [ "autoconvert", "rational64", "si", "std", "use_serde"]}
