[package]
name = "rtlola-frontend"
version = "0.6.0"
authors = [
    "Jan Baumeister <jan.baumeister@cispa.de>",
    "Florian Kohn <florian.kohn@cispa.de>",
    "Stefan Oswald <stefan.oswald@cispa.de>",
    "Maximilian Schwenger <maximilian.schwenger@cispa.de>",
]
edition = "2018"
description = "A frontend for the RTLola runtime verification framework."
readme = "README.md"
homepage = "http://rtlola.org"
repository = "https://github.com/reactive-systems/RTLola-Frontend"
license = "Apache-2.0"
keywords = ["verification", "frontend", "monitoring", "parser", "analyzer"]

[dependencies]
itertools = "0.10.0"
lazy_static = "1.3.0" # lazy_static! macro
num = "0.3.1"     # infinite precision rationals
rtlola-hir = "0.3.2"
rtlola-reporting = "0.2.1"
rtlola-parser = "0.2.1"
uom = { version = "0.31.1", default-features = false, features = [ "autoconvert", "rational64", "si", "std", "use_serde"]}
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.86"
num-rational = { version = "0.3.2", features = ["serde"] }
dot = "0.1.4"