[package]
name = "rtlola-hir"
version = "0.1.0"
authors = ["Maximilian Schwenger <schwenger@react.uni-saarland.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uom = { version = "0.30.0", default-features = false, features = [ "autoconvert", "rational64", "si", "std", "use_serde"]}
itertools = "0.9.0"
lazy_static = "1.3.0" # lazy_static! macro
petgraph = "0.5"
num = "0.3.1"     # infinite precision rationals
rtlola-reporting = { path = "../rtlola-reporting" }
rtlola-macros = "0.1.0"
rtlola-parser = { path = "../rtlola-parser" } 
rusttyc = { git = "https://github.com/Schwenger/RustTyC.git", branch="recursive-types"}
regex = "*"