[package]
name = "rtlola-macros"
version = "0.1.2"
authors = ["Maximilian Schwenger <maximilian.schwenger@cispa.de>"]
edition = "2018"
description = "Procedural macros for more convenient handling of HirModes in the rtlola_hir crate."
readme = "README.md"
repository = "https://github.com/Schwenger/RTLolaProcMacros"
homepage = "https://rtlola.org"
license = "MIT"
keywords = ["verification", "macro", "monitoring"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {version="1.0.64",features=["full"]}
quote = "1.0.9"

[lib]
proc-macro = true

