[package]
name = "rtlola-parser"
version = "0.1.0"
authors = ["maximilianschwenger", "floriankohn"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1"         # parser generator
pest_derive = "2.1"
rtlola-reporting = { path = "../rtlola-reporting" }
num = "0.3.1"     # infinite precision rationals
uom = { version = "0.30.0", default-features = false, features = [ "autoconvert", "rational64", "si", "std", "use_serde"]}
lazy_static = "1.3.0" # lazy_static! macro