[package]
name = "rtlola-parser"
version = "0.1.2"
authors = [
    "Florian Kohn <florian.kohn@cispa.de>",
    "Stefan Oswald <stefan.oswald@cispa.de>",
    "Malte Schledjewski <malte.schledjewski@cispa.de>",
    "Maximilian Schwenger <maximilian.schwenger@cispa.de>",
]
edition = "2018"
description = "A parser for RTLola specifications."
readme = "README.md"
homepage = "http://rtlola.org"
repository = "https://github.com/reactive-systems/RTLola-Frontend"
license = "Apache-2.0"
keywords = ["verification", "frontend", "monitoring", "parser", "analyzer"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1"         # parser generator
pest_derive = "2.1"
rtlola-reporting = { path = "../rtlola-reporting" }
num = "0.3.1"     # infinite precision rationals
uom = { version = "0.31.1", default-features = false, features = [ "autoconvert", "rational64", "si", "std", "use_serde"]}
lazy_static = "1.3.0" # lazy_static! macro