[package]
name = "rtlola-reporting"
version = "0.1.0"
authors = ["Maximilian Schwenger <schwenger@react.uni-saarland.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codespan-reporting = "0.9.5" # Error Reporting
pest = "2.1"