[package]
name = "rtlola-reporting"
version = "0.1.1"
authors = [
    "Florian Kohn <florian.kohn@cispa.de>",
    "Maximilian Schwenger <maximilian.schwenger@cispa.de>"
    ]
edition = "2018"
description = "An error reporting crate for RTLola-related crates."
readme = "README.md"
homepage = "http://rtlola.org"
repository = "https://github.com/reactive-systems/RTLola-Frontend"
license = "Apache-2.0"
keywords = ["reporting"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codespan-reporting = "0.11.1" # Error Reporting
pest = "2.1"